unpackaged/main/default/objects/Notification_Date__mdt/Notification_Date__mdt.object-meta.xml
<CustomObject>
    <description>Used for defining expiry date, close date, and follow up date notifications for Special Buys and Opportunities</description>
    <label>Notification Date</label>
    <pluralLabel>Notification Dates</pluralLabel>
</CustomObject>