unpackaged/main/default/objects/Notification_Date__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes where and how this notification date record is used</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>