unpackaged/main/default/objects/Notification_Date__mdt/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>Where a flow uses multiple notification types, this field describes the type to be used for the notification date record</description>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Reminder</fullName>
                <default>true</default>
                <label>Standard Reminder</label>
            </value>
            <value>
                <fullName>Closing Soon</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>