unpackaged/main/default/objects/Notification_Date__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object that this notification applies to</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>