unpackaged/main/default/objects/Notification_Date__mdt/fields/Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Status__c</fullName>
    <description>If relevant, defines at which record status/stage the notification should be sent</description>
    <label>Record Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>