unpackaged/main/default/objects/Notification_Date__mdt/listViews/All_records.listView-meta.xml
<ListView>
    <fullName>All_records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Record_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All records</label>
</ListView>